@@ -2457,12 +2457,6 @@ sub handle_texinfo
     }
     $output_rules .= &file_contents ('texinfos', $xform);
     push (@dist_targets, 'dist-info');
-
-    if ($cygnus_mode)
-    {
-	$output_rules .= "clean-info: mostlyclean-aminfo\n";
-    }
-
     push (@suffixes, '.texi', '.texinfo', '.txi', '.info', '.dvi', '.ps');
 
     if (! defined $options{'no-installinfo'})
