@@ -1,5 +1,10 @@
 2001-02-25  Akim Demaille  <akim@epita.fr>
 
+	* automake.in (handle_texinfo): Remove code handled by texinfos.am.
+
+	
+2001-02-25  Akim Demaille  <akim@epita.fr>
+
 	* automake.in (&transform): Also call &transform_cond on your
 	arguments.
 	(&handle_dist): Adjust.
